# text2query

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  sample.txt
app/: app.py
src/: core.py  prompt.py  questions.json  schema.json  utils.py
src/test/: test.sql
volumes/milvus/etcd/member/snap/: db
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
