[tool.poetry]
name = "text2query"
version = "0.1.0"
description = ""
authors = ["Ellie <33610035+EllieDJeon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.48.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
